Java 10 on Gradle now compiles